tried hard but failed :/

--- a/travel/src/app/blog/bloghome/bloghome.component.html
+++ b/travel/src/app/blog/bloghome/bloghome.component.html
@@ -1,1 +1,8 @@
-<p>bloghome works!</p>
+<app-header></app-header>
+<app-banner-area></app-banner-area>
+<app-top-categories></app-top-categories>
+<app-post-content></app-post-content>
+<app-footer></app-footer>
+
+
+
