--- a/travel/src/app/blog/single/single.component.html
+++ b/travel/src/app/blog/single/single.component.html
@@ -1,1 +1,4 @@
-<p>single works!</p>
+<app-header></app-header>
+<app-banner-area-single></app-banner-area-single>
+<app-post-content-single></app-post-content-single>
+<app-footer></app-footer>
