--- a/travel/src/app/contact/contacthome/contacthome.component.html
+++ b/travel/src/app/contact/contacthome/contacthome.component.html
@@ -1,1 +1,4 @@
-<p>contacthome works!</p>
+<app-header></app-header>
+<app-banner-area></app-banner-area>
+<app-contact-page></app-contact-page>
+<app-footer></app-footer>
