--- a/travel/src/app/pages/pageshome/pageshome.component.html
+++ b/travel/src/app/pages/pageshome/pageshome.component.html
@@ -1,1 +1,5 @@
-<p>pageshome works!</p>
+<app-header></app-header>
+<app-banner-area></app-banner-area>
+<app-sample-area></app-sample-area>
+<app-button></app-button>
+<app-footer></app-footer>
