--- a/travel/src/app/blog/bloghome/post-content/post-content.component.html
+++ b/travel/src/app/blog/bloghome/post-content/post-content.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 posts-list">
-        <div class="single-post row">
+        <div class="single-post row" *ngFor="let post of getData">
           <div class="col-lg-3  col-md-3 meta-details">
             <ul class="tags">
               <li><a href="#">Food,</a></li>
@@ -12,7 +12,7 @@
               <li><a href="#">Lifestyle</a></li>
             </ul>
             <div class="user-details row">
-              <p class="user-name col-lg-12 col-md-12 col-6"><a href="#">Mark wiens</a> <span class="lnr lnr-user"></span></p>
+              <p class="user-name col-lg-12 col-md-12 col-6"><a href="#">{{post.author}}</a> <span class="lnr lnr-user"></span></p>
               <p class="date col-lg-12 col-md-12 col-6"><a href="#">12 Dec, 2017</a> <span class="lnr lnr-calendar-full"></span></p>
               <p class="view col-lg-12 col-md-12 col-6"><a href="#">1.2M Views</a> <span class="lnr lnr-eye"></span></p>
               <p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span class="lnr lnr-bubble"></span></p>
@@ -20,116 +20,38 @@
           </div>
           <div class="col-lg-9 col-md-9 ">
             <div class="feature-img">
-              <img class="img-fluid" src="img/blog/feature-img1.jpg" alt="">
+              <img class="img-fluid" src="../../../../assets/img/blog/feature-img1.jpg" alt="">
             </div>
-            <a class="posts-title" href="blog-single.html"><h3>Astronomy Binoculars A Great Alternative</h3></a>
+            <a class="posts-title" href="blog-single.html"><h3>{{post.title}}</h3></a>
             <p class="excert">
-              MCSE boot camps have its supporters and its detractors. Some people do not understand why you should have to spend money on boot camp when you can get the MCSE study materials yourself at a fraction.
+              {{post.desc}}
             </p>
             <a href="blog-single.html" class="primary-btn">View More</a>
           </div>
-        </div>
-        <div class="single-post row">
-          <div class="col-lg-3  col-md-3 meta-details">
-            <ul class="tags">
-              <li><a href="#">Food,</a></li>
-              <li><a href="#">Technology,</a></li>
-              <li><a href="#">Politics,</a></li>
-              <li><a href="#">Lifestyle</a></li>
+        </div> -->
+        <nav class="blog-pagination justify-content-center d-flex">
+            <ul class="pagination">
+                <li class="page-item">
+                    <a href="#" class="page-link" aria-label="Previous">
+                        <span aria-hidden="true">
+                            <span class="lnr lnr-chevron-left"></span>
+                        </span>
+                    </a>
+                </li>
+                <li class="page-item"><a href="#" class="page-link">01</a></li>
+                <li class="page-item active"><a href="#" class="page-link">02</a></li>
+                <li class="page-item"><a href="#" class="page-link">03</a></li>
+                <li class="page-item"><a href="#" class="page-link">04</a></li>
+                <li class="page-item"><a href="#" class="page-link">09</a></li>
+                <li class="page-item">
+                    <a href="#" class="page-link" aria-label="Next">
+                        <span aria-hidden="true">
+                            <span class="lnr lnr-chevron-right"></span>
+                        </span>
+                    </a>
+                </li>
             </ul>
-            <div class="user-details row">
-              <p class="user-name col-lg-12 col-md-12 col-6"><a href="#">Mark wiens</a> <span class="lnr lnr-user"></span></p>
-              <p class="date col-lg-12 col-md-12 col-6"><a href="#">12 Dec, 2017</a> <span class="lnr lnr-calendar-full"></span></p>
-              <p class="view col-lg-12 col-md-12 col-6"><a href="#">1.2M Views</a> <span class="lnr lnr-eye"></span></p>
-              <p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span class="lnr lnr-bubble"></span></p>
-            </div>
-          </div>
-          <div class="col-lg-9 col-md-9 ">
-            <div class="feature-img">
-              <img class="img-fluid" src="img/blog/feature-img2.jpg" alt="">
-            </div>
-            <a class="posts-title" href="blog-single.html"><h3>The Basics Of Buying A Telescope</h3></a>
-            <p class="excert">
-              MCSE boot camps have its supporters and its detractors. Some people do not understand why you should have to spend money on boot camp when you can get the MCSE study materials yourself at a fraction.
-            </p>
-            <a href="blog-single.html" class="primary-btn">View More</a>
-          </div>
-        </div>
-        <div class="single-post row">
-          <div class="col-lg-3  col-md-3 meta-details">
-            <ul class="tags">
-              <li><a href="#">Food,</a></li>
-              <li><a href="#">Technology,</a></li>
-              <li><a href="#">Politics,</a></li>
-              <li><a href="#">Lifestyle</a></li>
-            </ul>
-            <div class="user-details row">
-              <p class="user-name col-lg-12 col-md-12 col-6"><a href="#">Mark wiens</a> <span class="lnr lnr-user"></span></p>
-              <p class="date col-lg-12 col-md-12 col-6"><a href="#">12 Dec, 2017</a> <span class="lnr lnr-calendar-full"></span></p>
-              <p class="view col-lg-12 col-md-12 col-6"><a href="#">1.2M Views</a> <span class="lnr lnr-eye"></span></p>
-              <p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span class="lnr lnr-bubble"></span></p>
-            </div>
-          </div>
-          <div class="col-lg-9 col-md-9">
-            <div class="feature-img">
-              <img class="img-fluid" src="img/blog/feature-img4.jpg" alt="">
-            </div>
-            <a class="posts-title" href="blog-single.html"><h3>The Night Sky</h3></a>
-            <p class="excert">
-              MCSE boot camps have its supporters and its detractors. Some people do not understand why you should have to spend money on boot camp when you can get the MCSE study materials yourself at a fraction.
-            </p>
-            <a href="blog-single.html" class="primary-btn">View More</a>
-          </div>
-        </div>
-        <div class="single-post row">
-          <div class="col-lg-3 col-md-3 meta-details">
-            <ul class="tags">
-              <li><a href="#">Food,</a></li>
-              <li><a href="#">Technology,</a></li>
-              <li><a href="#">Politics,</a></li>
-              <li><a href="#">Lifestyle</a></li>
-            </ul>
-            <div class="user-details row">
-              <p class="user-name col-lg-12 col-md-12 col-6"><a href="#">Mark wiens</a> <span class="lnr lnr-user"></span></p>
-              <p class="date col-lg-12 col-md-12 col-6"><a href="#">12 Dec, 2017</a> <span class="lnr lnr-calendar-full"></span></p>
-              <p class="view col-lg-12 col-md-12 col-6"><a href="#">1.2M Views</a> <span class="lnr lnr-eye"></span></p>
-              <p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span class="lnr lnr-bubble"></span></p>
-            </div>
-          </div>
-          <div class="col-lg-9 col-md-9">
-            <div class="feature-img">
-              <img class="img-fluid" src="img/blog/feature-img5.jpg" alt="">
-            </div>
-            <a class="posts-title" href="blog-single.html"><h3>Telescopes 101</h3></a>
-            <p class="excert">
-              MCSE boot camps have its supporters and its detractors. Some people do not understand why you should have to spend money on boot camp when you can get the MCSE study materials yourself at a fraction.
-            </p>
-            <a href="blog-single.html" class="primary-btn">View More</a>
-          </div>
-        </div>
-                  <nav class="blog-pagination justify-content-center d-flex">
-                      <ul class="pagination">
-                          <li class="page-item">
-                              <a href="#" class="page-link" aria-label="Previous">
-                                  <span aria-hidden="true">
-                                      <span class="lnr lnr-chevron-left"></span>
-                                  </span>
-                              </a>
-                          </li>
-                          <li class="page-item"><a href="#" class="page-link">01</a></li>
-                          <li class="page-item active"><a href="#" class="page-link">02</a></li>
-                          <li class="page-item"><a href="#" class="page-link">03</a></li>
-                          <li class="page-item"><a href="#" class="page-link">04</a></li>
-                          <li class="page-item"><a href="#" class="page-link">09</a></li>
-                          <li class="page-item">
-                              <a href="#" class="page-link" aria-label="Next">
-                                  <span aria-hidden="true">
-                                      <span class="lnr lnr-chevron-right"></span>
-                                  </span>
-                              </a>
-                          </li>
-                      </ul>
-                  </nav>
+        </nav>
       </div>
       <div class="col-lg-4 sidebar-widgets">
         <div class="widget-wrap">
@@ -140,7 +62,7 @@
                         </form>
           </div>
           <div class="single-sidebar-widget user-info-widget">
-            <img src="img/blog/user-info.png" alt="">
+            <img src="../../../../assets/img/blog/user-info.png" alt="">
             <a href="#"><h4>Charlie Barber</h4></a>
             <p>
               Senior blog writer
@@ -160,7 +82,7 @@
             <div class="popular-post-list">
               <div class="single-post-list d-flex flex-row align-items-center">
                 <div class="thumb">
-                  <img class="img-fluid" src="img/blog/pp1.jpg" alt="">
+                  <img class="img-fluid" src="../../../../assets/img/blog/pp1.jpg" alt="">
                 </div>
                 <div class="details">
                   <a href="blog-single.html"><h6>Space The Final Frontier</h6></a>
@@ -169,7 +91,7 @@
               </div>
               <div class="single-post-list d-flex flex-row align-items-center">
                 <div class="thumb">
-                  <img class="img-fluid" src="img/blog/pp2.jpg" alt="">
+                  <img class="img-fluid" src="../../../../assets/img/blog/pp2.jpg" alt="">
                 </div>
                 <div class="details">
                   <a href="blog-single.html"><h6>The Amazing Hubble</h6></a>
@@ -178,7 +100,7 @@
               </div>
               <div class="single-post-list d-flex flex-row align-items-center">
                 <div class="thumb">
-                  <img class="img-fluid" src="img/blog/pp3.jpg" alt="">
+                  <img class="img-fluid" src="../../../../assets/img/blog/pp3.jpg" alt="">
                 </div>
                 <div class="details">
                   <a href="blog-single.html"><h6>Astronomy Or Astrology</h6></a>
@@ -187,7 +109,7 @@
               </div>
               <div class="single-post-list d-flex flex-row align-items-center">
                 <div class="thumb">
-                  <img class="img-fluid" src="img/blog/pp4.jpg" alt="">
+                  <img class="img-fluid" src="../../../../assets/img/blog/pp4.jpg" alt="">
                 </div>
                 <div class="details">
                   <a href="blog-single.html"><h6>Asteroids telescope</h6></a>
@@ -197,7 +119,7 @@
             </div>
           </div>
           <div class="single-sidebar-widget ads-widget">
-            <a href="#"><img class="img-fluid" src="img/blog/ads-banner.jpg" alt=""></a>
+            <a href="#"><img class="img-fluid" src="../../../../assets/img/blog/ads-banner.jpg" alt=""></a>
           </div>
           <div class="single-sidebar-widget post-category-widget">
             <h4 class="category-title">Post Catgories</h4>
